Update project list in projects.json and clean up unused files

--- a/build_app/projects.json
+++ b/build_app/projects.json
@@ -1,9 +1,9 @@
 {
   "projects": [
-    "Kate Freeman",
-    "Harewood Green",
-    "30M Amazon",
-    "Chocs",
-    "Richie Rich"
+    "Project 1",
+    "Project 2",
+    "Project 3",
+    "Project 4",
+    "Project 5"
   ]
 }
